fix(styles): Adjust spacing to be 40px around each section

--- a/system-addon/content-src/components/ManualMigration/_ManualMigration.scss
+++ b/system-addon/content-src/components/ManualMigration/_ManualMigration.scss
@@ -2,7 +2,7 @@
   background: rgba(215, 215, 219, .5);
   font-size: 13px;
   border-radius: 2px;
-  margin-bottom: $search-margin-bottom;
+  margin-bottom: $section-spacing;
   padding: 20px;
   text-align: center;
 
